# zenav1-aom

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  HANDOFF-SCREEN.md  HANDOFF-TOGGLES.md  INTER-CHUNK1-HANDOFF.md  INTER-CHUNK2-HANDOFF.md  INTER-ENCODE-ROADMAP.md  INTER-FEATURES-PLAN.md  PARITY.md  PORTING.md  README.md  STATUS.md  justfile
benchmarks/: bd8_pipeline_2026-07-22.csv  bd8_pipeline_2026-07-22.md  decode_hotspots_2026-07-17.md  gate3_filters_2026-07-22.csv  gate3_filters_2026-07-22.md  gate3_intra_simd_2026-07-18.md  gate3_lever1_bce_2026-07-22.csv  gate3_lever1_bce_2026-07-22.md  gate3_profile_ranking_2026-07-16.md  gate3_transform_simd_2026-07-17.md  intra_tiebreak_deltas_2026-07-23.md  lowbd_loopfilter_2026-07-22.md  lowbd_txfm_foundation_2026-07-22.md  (+2 more)
crates/aom-bench/: Cargo.toml
crates/aom-bench/benches/: gate3.rs
crates/aom-bench/src/: lib.rs  rd_close.rs
crates/aom-bench/tests/: deltaq_mode3_e2e.rs  encoder_gate_cdef_e2e.rs  encoder_gate_superres_e2e.rs  inter_pack_tile_diff.rs  inter_rc_qindex_diff.rs  lr_restoration_gate.rs  rd_close_harness.rs  rd_close_intrabc.rs  rd_close_palette.rs  sb128_e2e.rs
crates/aom-decode/: Cargo.toml  README.md
crates/aom-decode/fuzz/fuzz_targets/: decode_frames.rs  decode_obus.rs
crates/aom-decode/fuzz/regression/: decode_obus_filmgrain_num_points_oob.obu  decode_obus_oom_268mpx_declared_frame.obu  decode_obus_segment_id_out_of_range.obu
crates/aom-decode/src/: film_grain.rs  frame.rs  lib.rs  qm.rs  qm_tables.rs  superres.rs
crates/aom-decode/tests/: chroma_facades_cdiff.rs  conformance_corpus.rs  disable_cdf_update_diff.rs  film_grain_diff.rs  fuzz_regression.rs  fuzz_sweep.rs  inter_ratchet.rs  inter_real_frame.rs  real_bitstream.rs  superres_diff.rs  tile_roundtrip.rs  warp_census.rs
crates/aom-dispatch/: Cargo.toml
crates/aom-dispatch/src/: lib.rs
crates/aom-dsp/: Cargo.toml  README.md
crates/aom-dsp/src/: lib.rs  lowbd.rs
crates/aom-dsp/src/cdef/: simd.rs
crates/aom-dsp/src/convolve/: mod.rs
crates/aom-dsp/src/dispatch/: mod.rs
crates/aom-dsp/src/entropy/: cdf.rs  dec.rs  default_cdfs.rs  dv_ref.rs  enc.rs  header.rs  leb128.rs  lr.rs  mod.rs  obu.rs  partition.rs  rb.rs  wb.rs
crates/aom-dsp/src/inter/: interintra.rs  mod.rs  warp.rs
crates/aom-dsp/src/intra/: simd.rs
crates/aom-dsp/src/loopfilter/: frame.rs  mod.rs  simd.rs
crates/aom-dsp/src/quant/: simd.rs
crates/aom-dsp/src/recon/: mod.rs
crates/aom-dsp/src/restore/: frame.rs  mod.rs  pick.rs  sgr.rs  wiener.rs
crates/aom-dsp/src/transform/: inv_txfm2d.rs
crates/aom-dsp/src/transform/simd/: inv1d_v3_i16_gen.rs  lowbd16.rs  mod.rs
crates/aom-dsp/src/txb/: cost.rs  entropy_ctx.rs  ext_tx.rs  fill.rs  mod.rs  optimize.rs  prob_cost.rs  read.rs  simd.rs  trellis_cost.rs  write.rs
crates/aom-dsp/tests/: avail_diff.rs  cdf_diff.rs  convolve_diff.rs  cost_coeffs_diff.rs  dec_facades_cdiff.rs  default_cdfs_diff.rs  dequant_txb_diff.rs  dv_ref_diff.rs  entropy_ctx_diff.rs  entropy_diff.rs  ext_tx_diff.rs  fill_diff.rs  frame_walk_diff.rs  header_diff.rs  inter_pred_diff.rs  interintra_diff.rs  intra_avail_diff.rs  inv_txfm2d_lowbd_diff.rs  kernels_diff.rs  leb128_diff.rs  lf_apply_diff.rs  loopfilter_lowbd_diff.rs  lpf_simd_diff.rs  lr_read_diff.rs  lr_write_diff.rs  obu_diff.rs  optimize_diff.rs  optimize_qm_diff.rs  partition_diff.rs  pick_diff.rs  pick_search.rs  prob_cost_diff.rs  rb_diff.rs  read_coeffs_diff.rs  read_tx_type_diff.rs  read_txb_full_diff.rs  trellis_cost_diff.rs  tx_size_ctx.rs  tx_type_cost_diff.rs  txb_diff.rs  (+6 more)
crates/aom-encode/: Cargo.toml  README.md
crates/aom-encode/src/: allintra_vis.rs  denoise.rs  encode_intra.rs  encode_sb.rs  hog.rs  inter_me.rs  inter_pack.rs  intra_rd.rs  intra_tx_nn_weights.rs  intra_uv_rd.rs  intrabc_search.rs  lf_search.rs  lib.rs  mode_costs.rs  noise_model.rs  nonrd_pickmode.rs  obu_assemble.rs  pack.rs  palette_search.rs  part4_nn_weights.rs  part4_prune.rs  partition.rs  partition_pick.rs  prune_tx_2d.rs  rc.rs  rd.rs  rd_pick.rs  real_costs.rs  resize.rs  speed_features.rs  superres_select.rs  tx_search.rs  var_part.rs
crates/aom-encode/src/cnn_partition/: cnn.rs  decision.rs  mod.rs  nn.rs  weights.rs
crates/aom-encode/src/hog/: intra_hog_model_weights.rs
crates/aom-encode/tests/: avg_4x4_diff.rs  avif_parity.rs  cfl_alpha_search_diff.rs  cnn_partition_cnn_diff.rs  cnn_partition_decision_diff.rs  cnn_partition_nn_diff.rs  coeff_costs_fill_diff.rs  decode_diff_ab_probe.rs  decode_diff_multisb.rs  decode_diff_noise_case.rs  denoise_and_model_diff.rs  encode_block_coeffs_diff.rs  encode_block_full_diff.rs  encode_coding_block_diff.rs  encode_intra_plane_diff.rs  encode_intra_plane_uv_diff.rs  encode_sb_diff.rs  encoder_gate_bd10_diff.rs  encoder_gate_chroma_ss_e2e.rs  encoder_gate_e2e_byte_match.rs  encoder_gate_multitile.rs  encoder_gate_tune_iq_e2e.rs  fwht4x4_diff.rs  hog_prune_diff.rs  intra_mode_cost_diff.rs  intra_model_rd_diff.rs  intra_rd_pick_diff.rs  intra_sbuv_mode_loop_diff.rs  intra_sby_candidates_diff.rs  intra_sby_mode_loop_diff.rs  intra_tx_nn_diff.rs  intra_variance_factor_diff.rs  kb11_speed7_noise_localize.rs  kb4_bd10_rd_localize.rs  kb4_txb2_probe.rs  kb4_txb_tie_probe.rs  kb5_lossless_block_roundtrip.rs  kb5_lossless_localize.rs  kb6_real_rd_localize.rs  kb7_rd_localize.rs  (+25 more)
crates/aom-encode/tests/common/: mod.rs
crates/aom-loopfilter/: Cargo.toml
crates/aom-loopfilter/src/: highbd.rs  lib.rs  simd.rs
crates/aom-loopfilter/tests/: hbd_lpf_diff.rs  lf_apply_diff.rs  lpf_diff.rs  lpf_simd_diff.rs
crates/aom-quant/: Cargo.toml
crates/aom-quant/src/: build_quantizer.rs  lib.rs  qm.rs  quant_common.rs  simd.rs
crates/aom-quant/tests/: dc_quant_diff.rs  highbd_quant_diff.rs  qm_inv_select_diff.rs  quantize_fp_simd_diff.rs  quantize_qm_diff.rs  set_q_index_diff.rs
crates/aom-recon/: Cargo.toml
crates/aom-recon/src/: lib.rs
crates/aom-restore/: Cargo.toml
crates/aom-restore/src/: frame.rs  lib.rs  pick.rs  wiener.rs
crates/aom-restore/tests/: frame_walk_diff.rs  kernels_diff.rs  pick_diff.rs  wiener_simd_diff.rs
reference/: build.sh
(+109 files in other folders)
