[package]
name = "aom-bench"
version = "0.0.1"
edition = "2024"
license = "BSD-2-Clause"
description = "Gate-3 performance harness for aom-rs: zenbench paired benchmarks of the pure-Rust port vs the real libaom C oracle (in-process via aom-sys-ref), plus a callgrind profile driver. Bench-only crate, never published."
publish = false

[dependencies]
# The port under measurement.
aom-encode = { path = "../aom-encode" }
aom-decode = { path = "../aom-decode" }
aom-entropy = { path = "../aom-entropy" }
aom-quant = { path = "../aom-quant" }
# Stills-parity post-filter stages: the loop-restoration search
# (aom-restore::pick), the deblock APPLY that feeds both the LR and CDEF
# gates (aom-loopfilter loop_filter_frame), and the LR mode-cost derivation
# (aom-txb cost_tokens_from_cdf).
aom-restore = { path = "../aom-restore" }
aom-loopfilter = { path = "../aom-loopfilter" }
aom-txb = { path = "../aom-txb" }
# The REAL C oracle (reference libaom v3.14.1, Release + SIMD). This crate is
# bench-only (publish = false), so depending on the FFI oracle here mirrors the
# dev-dependency isolation the shipping crates use: all unsafe stays inside
# aom-sys-ref, and nothing here ships.
aom-sys-ref = { path = "../aom-sys-ref" }
# RD-closeness scoring for the stills-parity bulk-port harness (rd_close):
# perceptual quality of port-vs-C reconstructions against the source.
# Latest on lib.rs verified 2026-07-16.
zensim = "0.2.7"

[dev-dependencies]
zenbench = "0.1.9"

[[bench]]
name = "gate3"
harness = false
