[package]
name = "aom-decode"
version = "0.0.1"
edition = "2024"
license = "BSD-2-Clause"
description = "Decoder composition layer for aom-rs: KEY-frame luma tile reconstruction driver (partition walk + per-leaf mode-info/coeff decode + intra predict + inverse transform), roundtrip-pinned to the byte-identical-to-C writers."
publish = false

[dependencies]
aom-entropy = { path = "../aom-entropy" }
aom-intra = { path = "../aom-intra" }
aom-loopfilter = { path = "../aom-loopfilter" }
aom-quant = { path = "../aom-quant" }
aom-txb = { path = "../aom-txb" }
aom-encode = { path = "../aom-encode" }

[dev-dependencies]
aom-sys-ref = { path = "../aom-sys-ref" }
