[package]
name = "aom-decode"
version = "0.0.1"
edition = "2024"
license = "BSD-2-Clause"
description = "Decoder composition layer for aom-rs: KEY-frame luma tile reconstruction driver (partition walk + per-leaf mode-info/coeff decode + intra predict + inverse transform), roundtrip-pinned to the byte-identical-to-C writers."
publish = false

[dependencies]
aom-cdef = { path = "../aom-cdef" }
aom-entropy = { path = "../aom-entropy" }
aom-intra = { path = "../aom-intra" }
aom-loopfilter = { path = "../aom-loopfilter" }
aom-quant = { path = "../aom-quant" }
aom-recon = { path = "../aom-recon" }
aom-restore = { path = "../aom-restore" }
aom-transform = { path = "../aom-transform" }
aom-txb = { path = "../aom-txb" }

[dev-dependencies]
aom-sys-ref = { path = "../aom-sys-ref" }
# Encoder side, used ONLY by the roundtrip test harness
# (tests/tile_roundtrip.rs: xform_quant / QuantKind / QuantParams) -- an
# encode->decode roundtrip legitimately needs the encoder. As a dev-dependency
# the decode LIBRARY no longer depends on aom-encode: the reverse-dependency
# edge is broken (reconstruct_txb now comes from aom-recon).
aom-encode = { path = "../aom-encode" }
