[package]
name = "aom-encode"
version = "0.0.1"
edition = "2024"
license = "BSD-2-Clause"
description = "Encoder composition layer for aom-rs: av1_xform_quant (forward transform + quantize + entropy context), bit-exact vs libaom."
publish = false

[dependencies]
aom-transform = { path = "../aom-transform" }
aom-quant = { path = "../aom-quant" }
aom-txb = { path = "../aom-txb" }
aom-recon = { path = "../aom-recon" }
aom-entropy = { path = "../aom-entropy" }
aom-dist = { path = "../aom-dist" }
aom-intra = { path = "../aom-intra" }
# lf_search.rs reuses the already bit-exact deblock-filter APPLICATION
# (aom_loopfilter::frame::loop_filter_frame) as the trial-filter primitive
# for the loop-filter-level RD search (av1_pick_filter_level) -- never
# reimplemented, per the mission's "reuse, don't re-port the kernel" rule.
aom-loopfilter = { path = "../aom-loopfilter" }
# pickcdef.rs reuses the already bit-exact CDEF kernels (cdef_find_dir /
# cdef_filter_block_16) as the CDEF-strength-search filter primitives --
# never reimplemented, same rule as aom-loopfilter above.
aom-cdef = { path = "../aom-cdef" }

[dev-dependencies]
aom-sys-ref = { path = "../aom-sys-ref" }
# Read-only use for decode-diff diagnostics only (see
# tests/decode_diff_noise_case.rs) -- aom-decode itself is owned by the
# decoder track; this crate never modifies it. dev-dependency only, so this
# does not create a cycle in the library build graph (aom-decode's own
# [dependencies] on aom-encode only applies when building aom-decode itself;
# test binaries here are a separate compilation unit).
aom-decode = { path = "../aom-decode" }
# AVIF container muxer -- used ONLY by the `avif_parity` test (Gate 4,
# zenavif integration): wraps the port's byte-exact AV1 OBU frame into an
# AVIF still, which the harness then round-trips (parse container -> extract
# the coded AV1 -> byte-compare) and decodes (via aom-decode). Dev-dependency
# only; never linked into the aom-encode library. Pinned to the SAME git rev
# the zenavif codec crate consumes (imazen/zenavif consumes it via this exact
# rev in its [patch.crates-io]; zenavif-serialize 0.2.0 is unpublished).
zenavif-serialize = { git = "https://github.com/imazen/zenavif-serialize", rev = "4c90d4dd02ef1684fa2230c6aaa2b5ef51e6a926" }
